# ai-ml-project

./: .gitignore  Final.ipynb  HOG.ipynb  Makefile  README.md  Sobel.ipynb  main.py  predict_for_image.py  prepare_images.py  pyproject.toml  train_svm.py
notebooks/: 1_Sobel.ipynb  2_HOG.ipynb  3_Final.ipynb
scripts/: data_normalize.py  data_process.py  model_run.py  model_train.py
shared/: dataset.py  loss.py  prepared_dataset.py  utils.py
shared/hog/: __init__.py  l2_normalization.py  main.py
src/: config.py  inference.py  svm.py  training.py
src/shared/: bias.py  dataset.py  loss.py  metrics.py  prepared_dataset.py  training.py  utils.py
src/shared/hog/: __init__.py  sobel.py
src/shared/kernels/: __init__.py  rbf.py
