[project]
name = "ai-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=2.1.0",
    "matplotlib>=3.10.9",
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 80
