[project]
name = "ai-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=2.1.0",
    "matplotlib>=3.10.9",
    "mypy>=1.20.2",
    "nbstripout>=0.9.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
]

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "tqdm>=4.67.3",
]
