[project]
name = "ai-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
]

[dependency-groups]
dev = [
    "kaggle>=2.1.0",
    "nbstripout>=0.9.1",
    "ruff>=0.15.12",
    "tqdm>=4.67.3",
    "ty>=0.0.34",
    "types-tqdm>=4.67.3.20260408",
]

[tool.basedpyright]
reportExplicitAny = false

[tool.ruff]
line-length = 80
